[package]
name = "looplan_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["query"] }
async-session = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower-http = { version = "0.4.0", features = ["cors"] }
mongodb = "2.6.0"
rust-argon2 = "1.0.0"
bson = { version = "2.6.1", features = ["chrono-0_4", "uuid-1"] }
chrono = "0.4.26"
chrono-tz = "0.8.3"
